2016-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Improve the
	support of SOURCE_DATE_EPOCH.

2016-05-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, xbb.c: Apply the patch by Alexis,
	http://tug.org/pipermail/tex-live/2016-May/038339.html
	for the support of SOURCE_DATE_EPOCH.
	* pdfencrypt.c: Use gmtime instead of localtime if SOURCE_DATE_EPOCH
	is given, to be consistent with the patch by Alexis.

2016-03-07  Karl Berry  <karl@tug.org>

	* man/dvipdfmx.1: .B not .b.
	Report on tex-k from esr, 29 Feb 2016 12:30:31.

2016-03-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* configure.ac, tests/*.[bb,xbb]: Update version number to 20160307
	for TeX Live 2016.

2016-03-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c, dvipdfmx.h, mpost.c: Introduce a new option --mvorigin.
	The translation of the origin in MP inclusion by using dvipdfmx.def
	or xdvipdfmx.def is enabled only if the option --mvorigin is set.

2016-02-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change the default value of pdfdecimaldigits from 2
	to 3, to be consistent with pdfTeX.

2016-02-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Support to output
	a unique pdf file from a unique xdv/dvi file. If an environment
	variable SOURCE_DATE_EPOCH is defined correctly like
	SOURCE_DATE_EPOCH=1456304783, the value is used as the current time,
	and if the name of the output pdf file is the same, its content is
	exactly unique.

2016-02-23  Masamichi HOSODA  <trueroad@trueroad.jp>

	* pdfdoc.c: Support UTF-16 with null bytes as labels.

2016-02-23  Jonathan Kew  <jfkthame@gmail.com>

	* dvicodes.h, dvi.c, pdfdev.[ch]: Support xetex 0.99995 output
	(dvi format 7) that includes ActualText content.

2016-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Remaining fix for that on 2016-02-13.

2016-02-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
